<?xml version="1.0"?>
<package format="2">
  <name>fsm</name>
  <version>0.0.0</version>
  <description>The fsm package</description>

  <maintainer email="furkan@todo.todo">furkan</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
